<resources>
    <string name="app_name">Karen Balance</string>
    <string name="home_page">صفحه اصلی</string>
    <string name="menu_money">پول</string>
    <string name="menu_charts">نمودارها</string>
    <string name="menu_home">خانه</string>
    <string name="menu_targets">اهداف</string>
    <string name="menu_savings">پس‌انداز</string>
    <string name="monthly_income_nameBank">درآمد ماهانه و نام بانک</string>
    <string name="daily_spent_income">مخارج روزانه</string>
    <string name="monthly_spent_income">مخارج ماهانه</string>
    <string name="error_read_information">خطا در خواندن اطلاعات</string>
    <string name="btn_edit">دکمه ویرایش</string>
    <string name="btn_add">دکمه افزودن</string>
    <string name="hide_monthly_income">* * * * * * *</string>
    <string name="name_bank">نام بانک</string>
    <string name="today_expenses">هزینه‌های امروز</string>
    <string name="month_expenses">هزینه‌های این ماه</string>
    <string name="list_is_empty">لیست خالی است</string>
    <string name="average_daily_spending_amount_on_the_chart">میانگین مبلغ خرج‌شده روزانه در نمودار</string>
    <string name="amount_saved_today">مقدار پس‌انداز شده امروز</string>
    <string name="amount_saved_this_month">مقدار پس‌انداز شده این ماه</string>
    <string name="you_have">شما دارید</string>
    <string name="out_of">از</string>
    <string name="delete">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="main_target">هدف اصلی</string>

    <!--    add other txt to string -->
    <string name="error_fetching_latest_date">خطا در دریافت تاریخ جدید: %1$s</string>
    <string name="error_fetching_data">خطا در دریافت داده‌ها: %1$s</string>
    <string name="add_new_target">اضافه کردن هدف جدید</string>
    <string name="enter_name">وارد کردن نام</string>
    <string name="enter_price">وارد کردن قیمت</string>
    <string name="Enter_valid_num">لطفا عدد معتبر وارد کنید</string>
    <string name="Is_it_necessary">ایا این ضروری است ؟</string>
    <string name="selected_img">عکس را انتخاب کنید</string>
    <string name="clear_img">عکس را حذف کنید</string>
    <string name="Save">ذخیره</string>
    <string name="name_is_empty">نام خالی است !</string>
    <string name="price_is_empty">قیمت خالی است !</string>
    <string name="message_save_target">ذخیره ی هدف با موفقیت انجام شد ✔✔✔</string>
    <string name="message_del_target">حذف هدف با موفقیت انجام شد ✔✔✔</string>
    <string name="report_expense">گزارش مخارج روزانه</string>
    <string name="enter_description">توضحات خود را وارد کنید :</string>
    <string name="txt_hint_expe_daily">توضیحات خود را برای این خرج وارد کنید</string>
    <string name="update_successfull">تغیر با موفقیت ایجاد شد ✔✔✔</string>
    <string name="message_save_description">توضیحات ذخیره شد ✔✔✔</string>
    <string name="error_updating_record">خطا در بروزرسانی رکورد: %1$s</string>
    <string name="description_can_not_null">توضحیات نمی تواند  خالی باشد ❌❌</string>
    <string name="price_can_not_null">قیمت نمی تواند  خالی باشد ❌❌</string>
    <string name="sms_permission_required">برای استفاده از این ویژگی، اجازه ارسال پیامک مورد نیاز است.</string>
    <string name="permission_required_message">برای استفاده از برنامه Karen Balance، باید اجازه دسترسی به پیام‌ها را بدهید.</string>
    <string name="error_get_name_bank">خطا در گرفتن نام بانک !!</string>
    <string name="daily_spent_over">مخارج روزانه - مبلغ مصرف نشده: \n 0 - بیش از حد مجاز!!</string>
    <string name="daily_spent_income_unspent">درآمد خرج‌شده روزانه - خرج‌نشده: \n %1$s</string>
    <string name="monthly_spent_income_unspent">درآمد خرج‌شده ماهیانه - خرج‌نشده: \n %1$s</string>
    <string name="used">خرج شده</string>
    <string name="over_limit">بیش از حد</string>
    <string name="enter_bank_name">نام بانکی که پیامک درآمد شما از آن به دست می‌آید را وارد کنید :</string>
    <string name="alike_bank_name">ResalatBank | +9891*********</string>
    <string name="name_bank_saved">نام بانک : %1$s ذخیره شد!</string>
    <string name="filed_can_not_empty">فیلد نمی تواند خالی باشد</string>
    <string name="monthly_income">درامد ماهیانه</string>
    <string name="enter_monthly_income">درامد ماهیانه ی خود را وارد کنید :</string>
    <string name="monthly_income_save">دارمد ماهیانه با موفقیت ذخیره شد ✔✔✔</string>
    <string name="notification_overspent">شما %1$s بیشتر از حد مجاز روزانه خرج کردید! مراقب باش. 😓</string>
    <string name="notification_saved">آفرین! شما امروز %1$s صرفه‌جویی کردید. 🎉</string>
    <string name="daily_financial_report">گزارش مالی روزانه</string>
    <string name="new_month_started">شروع ماه جدید</string>
    <string name="new_month_description">وارد ماه جدید شدیم! هزینه‌های ماه گذشته پاک‌سازی شدند.</string>
    <string name="title_chart_expences">خرج های روزانه</string>
    <string name="today">امروز</string>
    <string name="target_name_main">%1$s (اصلی)</string>
    <string name="Necessary">ضروری</string>
    <string name="Unnecessary">غیر ضروری</string>
    <string name="ok">باشه</string>
    <string name="cancel">بیخیال</string>
    <string name="change_main_target_title">تغییر هدف اصلی</string>
    <string name="change_main_target_message">آیا مطمئن هستید که می‌خواهید این را به عنوان هدف اصلی تنظیم کنید؟</string>
    <string name="delete_target_title">حذف هدف</string>
    <string name="delete_target_message">آیا مطمئن هستید که می‌خواهید %1$s را حذف کنید؟</string>
    <string name="update_target">ویرایش کردن هدف</string>
    <string name="update">به روزرسانی</string>
    <string name="error_invalid_num">عدد درست وارد کنید !!</string>
    <string name="your_saving_income">درآمد پس‌انداز شما: %1$s</string>
    <string name="you_overspent">شما بیش از حد خرج کرده‌اید! %1$s بیشتر از حد مجاز خرج کردید.</string>



</resources>