<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_beige"
    tools:context=".MoneyFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- MaterialButton with rounded corners -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_list_daily_expense"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/highlights"
            android:fontFamily="@font/pacifico_egular"
            android:text="@string/today_expenses"
            android:textColor="@color/chocolate_brown"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" /> <!-- Set the corner radius here -->

        <!-- MaterialButton with rounded corners -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_list_monthly_expense"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/highlights"
            android:fontFamily="@font/pacifico_egular"
            android:text="@string/month_expenses"
            android:textColor="@color/chocolate_brown"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" /> <!-- Set the corner radius here -->
    </LinearLayout>

    <TextView
        android:id="@+id/txt_list_empty"
        android:layout_width="283dp"
        android:layout_height="82dp"
        android:fontFamily="@font/pacifico_egular"
        android:text="@string/list_is_empty"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reycler_expenses"
        android:layout_width="393dp"
        android:layout_height="718dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
