<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_beige"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/txt_title_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/home_page"
        android:textAlignment="center"
        android:fontFamily="@font/pacifico_egular"
        android:textColor="@color/chocolate_brown"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_monthly_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_title_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_edit_monthly_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/highlights"
                android:src="@drawable/ic_edit" />

            <TextView
                android:id="@+id/txt_show_monthly_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/hide_monthly_income"
                android:textSize="20sp"
                android:textColor="@color/chocolate_brown" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_name_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_monthly_income"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_edit_name_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/highlights"
                android:src="@drawable/ic_edit" />

            <TextView
                android:id="@+id/txt_show_name_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name_bank"
                android:textSize="20sp"
                android:textColor="@color/chocolate_brown" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView برای نمودار هزینه‌های روزانه -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_daily_spent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_name_bank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_daily_spent_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_egular"
                android:text="@string/daily_spent_income"
                android:textAlignment="center"
                android:textColor="@color/chocolate_brown"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart_daily"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView برای نمودار هزینه‌های ماهانه -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_monthly_spent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_daily_spent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_monthly_spent_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_egular"
                android:text="@string/monthly_spent_income"
                android:textAlignment="center"
                android:textColor="@color/chocolate_brown"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart_monthly"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
